--- a/docroot/themes/custom/themekit/global/sass/components/_splash.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_splash.scss
@@ -14,7 +14,7 @@ $_splash-background: $color-gray-300;
   background: $_splash-background;
   visibility: hidden;
 
-  display: none;
+  //display: none;
 
   // Logo
   &__logo {
