--- a/docroot/themes/custom/themekit/global/sass/base/_config.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_config.scss
@@ -476,13 +476,18 @@ $animations: (
     '.level-wrapper:nth-child(2)': blockFadeIn 1s .5s $animations-easing both,
     '.level-wrapper:nth-child(3)': blockFadeIn 1s 1s $animations-easing both,
   ),
+  '.block--views-blockcategories-listing': (
+    '.heading': blockTitle 1s $animations-easing both,
+    '.views-row:nth-child(n)': blockFadeIn 1s $animations-easing both,
+    '.views-row:nth-child(2n)': blockFadeIn 1s .3s $animations-easing both,
+  ),
   '.block--categories': (
     '.field--name-field-categories .field__item:nth-child(1) .field--name-field-image img': blockShowIn .5s $animations-easing both,
     '.field--name-field-categories .field__item:nth-child(1) .term-content': blockFadeIn .7s .2s $animations-easing both,
     '.field--name-field-categories .field__item:nth-child(2) .field--name-field-image img': blockShowIn .5s .9s $animations-easing both,
     '.field--name-field-categories .field__item:nth-child(2) .term-content': blockFadeIn .7s 1.1s $animations-easing both,
-    '.field--name-field-categories .field__item:nth-child(3) .field--name-field-image img': blockShowIn .5s $animations-easing both,
-    '.field--name-field-categories .field__item:nth-child(3) .term-content': blockFadeIn .7s .2s $animations-easing both,
+    '.field--name-field-categories .field__item:nth-child(3) .field--name-field-image img': blockShowIn .5s 1.1s $animations-easing both,
+    '.field--name-field-categories .field__item:nth-child(3) .term-content': blockFadeIn .7s 1.3s $animations-easing both,
     '.shape-wrapper::before': (
       blockSlideIn 1s $animations-easing both,
     ),
@@ -495,11 +500,11 @@ $animations: (
   '.block--cases-slider': (
     '.field--name-field-heading': blockTitle 1s $animations-easing both,
     '.field--name-field-link': blockFadeIn 1s .1s $animations-easing both,
-    '.block-view': blockFadeAngleIn 1s $animations-easing,
+    '.block-view': blockFadeAngleIn 1s $animations-easing both,
   ),
   '.block--news-slider': (
     '.field--name-field-heading': blockTitle 1s $animations-easing both,
     '.field--name-field-link': blockFadeIn 1s .1s $animations-easing both,
-    '.block-view': blockFadeAngleIn 1s $animations-easing,
+    '.block-view': blockFadeAngleIn 1s $animations-easing both,
   ),
 );
