--- a/docroot/themes/custom/themekit/global/sass/base/_animation.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_animation.scss
@@ -74,10 +74,19 @@
 
 @keyframes blockSlideIn {
   0% {
-    margin-top: #{$animations-translate-position * 2};
+    transform: translateY(#{$animations-translate-position * 2});
   }
   100% {
-    margin-top: 0;
+    transform: translateY(0);
+  }
+}
+
+@keyframes blockSlideOut {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(#{$animations-translate-position * -1});
   }
 }
 
