--- a/docroot/themes/custom/themekit/global/sass/base/_config.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_config.scss
@@ -391,22 +391,28 @@ $animations-translate-position: 35px;
 
 /// Animations
 $animations: (
-  '.block--home-banner': (
+  '.block--home-banner.animation-in': (
     '.heading': blockTitle 1s $animations-easing both,
     '.field--name-field-description': blockFadeIn 1s .15s $animations-easing both,
     '.field--name-field-p-link .field__item:nth-child(1)': blockFadeIn 1s .25s $animations-easing both,
     '.field--name-field-p-link .field__item:nth-child(2)': blockFadeIn 1s .35s $animations-easing both,
   ),
-  '.block--basic-banner': (
+  '.block--home-banner.animation-out': (
+    '.field--name-field-media::after': blockSlideOut 1s $animations-easing both,
+  ),
+  '.block--basic-banner.animation-in': (
     '.heading': blockTitle 1s $animations-easing both,
     '.field--name-field-description': blockFadeIn 1s .1s $animations-easing both,
     '.field--name-field-p-link .field__item:nth-child(1)': blockFadeIn 1s .2s $animations-easing both,
     '.field--name-field-p-link .field__item:nth-child(2)': blockFadeIn 1s .3s $animations-easing both,
   ),
-  '.block--simple-banner': (
+  '.block--basic-banner.animation-out': (
+    '.field--name-field-media::after': blockSlideOut 1s $animations-easing both,
+  ),
+  '.block--simple-banner.animation-in': (
     '.heading': blockTitle 1s $animations-easing both,
   ),
-  '.block--text': (
+  '.block--text.animation-in': (
     '&::before': (
       blockSlideIn 1s $animations-easing both,
       shapeRotate 4s $animations-easing infinite alternate
@@ -419,21 +425,24 @@ $animations: (
     '.field--name-field-p-link .field__item:nth-child(1)': blockFadeIn 1s .8s $animations-easing both,
     '.field--name-field-p-link .field__item:nth-child(2)': blockFadeIn 1s .9s $animations-easing both,
   ),
-  '.block--text-with-media': (
+  '.block--text-with-media.animation-in': (
     '.field--name-field-media img': blockSlideIn 1s $animations-easing both,
     '.heading': blockTitle 1s .5s $animations-easing both,
     '.field--name-field-description': blockFadeIn 1s .6s $animations-easing both,
     '.field--name-field-p-link .field__item:nth-child(1)': blockFadeIn 1s .8s $animations-easing both,
     '.field--name-field-p-link .field__item:nth-child(2)': blockFadeIn 1s .9s $animations-easing both,
   ),
-  '.block--links': (
+  '.block--text-with-media.animation-out': (
+    '.field--name-field-media img': blockSlideOut 1s $animations-easing both,
+  ),
+  '.block--links.animation-in': (
     '.heading': blockTitle 1s $animations-easing both,
     '.field--name-field-links': blockFadeIn 1s .2s $animations-easing both,
   ),
-  '.block--community-features': (
+  '.block--community-features.animation-in': (
     '&': blockFadeIn 1s .2s $animations-easing both,
   ),
-  '.block--partners': (
+  '.block--partners.animation-in': (
     '.views-row:nth-child(1)': blockFadeIn .5s $animations-easing both,
     '.views-row:nth-child(2)': blockFadeIn .5s .15s $animations-easing both,
     '.views-row:nth-child(3)': blockFadeIn .5s .3s $animations-easing both,
@@ -446,7 +455,7 @@ $animations: (
     '.block-content .field--name-field-p-link .field__item:nth-child(1)': blockFadeIn 1s .3s $animations-easing both,
     '.block-content .field--name-field-p-link .field__item:nth-child(2)': blockFadeIn 1s .4s $animations-easing both,
   ),
-  '.block--views-blockevents-events': (
+  '.block--views-blockevents-events.animation-in': (
     '.view-events-events > .view-content > .views-row:nth-child(1)': blockFadeIn 1s .2s $animations-easing both,
     '.view-events-events > .view-content > .views-row:nth-child(2)': blockFadeIn 1s .25s $animations-easing both,
     '.view-events-events > .view-content > .views-row:nth-child(3)': blockFadeIn 1s .3s $animations-easing both,
@@ -454,7 +463,7 @@ $animations: (
     '.node--view-mode-featured-teaser .date-wrapper': blockFadeIn 1s .2s $animations-easing both,
     '.node--view-mode-featured-teaser .field-content': blockFadeIn 1s .3s $animations-easing both,
   ),
-  '.block--views-blockcases-listing': (
+  '.block--views-blockcases-listing.animation-in': (
     '.view-filters': blockFadeIn 1s $animations-easing both,
     '.views-row:nth-child(1)': blockFadeIn .5s $animations-easing both,
     '.views-row:nth-child(2)': blockFadeIn .5s .1s $animations-easing both,
@@ -470,18 +479,18 @@ $animations: (
     '.views-row:nth-child(12)': blockFadeIn .5s 1.1s $animations-easing both,
     '.pager': blockFadeIn .5s 1.2s $animations-easing both,
   ),
-  '.block--views-blockpartners-listing': (
+  '.block--views-blockpartners-listing.animation-in': (
     '.heading': blockTitle 1s $animations-easing both,
     '.level-wrapper:nth-child(1)': blockFadeIn 1s $animations-easing both,
     '.level-wrapper:nth-child(2)': blockFadeIn 1s .5s $animations-easing both,
     '.level-wrapper:nth-child(3)': blockFadeIn 1s 1s $animations-easing both,
   ),
-  '.block--views-blockcategories-listing': (
+  '.block--views-blockcategories-listing.animation-in': (
     '.heading': blockTitle 1s $animations-easing both,
     '.views-row:nth-child(n)': blockFadeIn 1s $animations-easing both,
     '.views-row:nth-child(2n)': blockFadeIn 1s .3s $animations-easing both,
   ),
-  '.block--categories': (
+  '.block--categories.animation-in': (
     '.field--name-field-categories .field__item:nth-child(1) .field--name-field-image img': blockShowIn .5s $animations-easing both,
     '.field--name-field-categories .field__item:nth-child(1) .term-content': blockFadeIn .7s .2s $animations-easing both,
     '.field--name-field-categories .field__item:nth-child(2) .field--name-field-image img': blockShowIn .5s .9s $animations-easing both,
@@ -497,12 +506,12 @@ $animations: (
     '.block-content .field--name-field-p-link .field__item:nth-child(1)': blockFadeIn 1s .8s $animations-easing both,
     '.block-content .field--name-field-p-link .field__item:nth-child(2)': blockFadeIn 1s .9s $animations-easing both,
   ),
-  '.block--cases-slider': (
+  '.block--cases-slider.animation-in': (
     '.field--name-field-heading': blockTitle 1s $animations-easing both,
     '.field--name-field-link': blockFadeIn 1s .1s $animations-easing both,
     '.block-view': blockFadeAngleIn 1s $animations-easing both,
   ),
-  '.block--news-slider': (
+  '.block--news-slider.animation-in': (
     '.field--name-field-heading': blockTitle 1s $animations-easing both,
     '.field--name-field-link': blockFadeIn 1s .1s $animations-easing both,
     '.block-view': blockFadeAngleIn 1s $animations-easing both,
