--- a/docroot/themes/custom/themekit/global/sass/components/_splash.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_splash.scss
@@ -6,15 +6,15 @@ $_splash-background: $color-gray-300;
 
 .splash {
   position: fixed;
-  z-index: z(under);
+  z-index: z(splash);
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  left: -20vw;
+  width: 140vw;
+  height: calc(120%);
+  border-bottom-right-radius: 100%;
+  border-bottom-left-radius: 100%;
   background: $_splash-background;
   visibility: hidden;
-
-  //display: none;
 
   // Logo
   &__logo {
@@ -44,29 +44,31 @@ $_splash-background: $color-gray-300;
   html.no-js & {
     display: none;
   }
+}
 
-  html.no-js body {
-    visibility: visible;
-    opacity: 1;
-  }
+html.no-js body,
+html.js body {
+  visibility: visible;
+  opacity: 1;
 }
 
 // Show animation for relevant state
 body {
-  //visibility: hidden;
-  //opacity: 0;
+  visibility: hidden;
+  opacity: 0;
 }
 
-body.initialised-splash {
+body.initialized-splash {
   visibility: visible;
   opacity: 1;
 
   .splash {
-    &__logo {
-      z-index: z(splash);
+    visibility: visible;
+    animation: splash .7s 1s $animations-easing both;
 
+    &__logo {
       &::before {
-        animation: splashOverlay 1.5s linear 1s forwards;
+        animation: splashOverlay .7s .5s $animations-easing both;
       }
     }
   }
