COD-34 - Adjust line of the events block (with gradient) for mobile view)

--- a/docroot/themes/custom/themekit/global/sass/base/_config.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_config.scss
@@ -456,6 +456,7 @@ $animations: (
     '.block-content .field--name-field-p-link .field__item:nth-child(2)': blockFadeIn 1s .4s $animations-easing both,
   ),
   '.block--views-blockevents-events.animation-in': (
+    '.view-events-events > .view-content::before': blockFadeIn 1s $animations-easing both,
     '.view-events-events > .view-content > .views-row:nth-child(1)': blockFadeIn 1s .2s $animations-easing both,
     '.view-events-events > .view-content > .views-row:nth-child(2)': blockFadeIn 1s .25s $animations-easing both,
     '.view-events-events > .view-content > .views-row:nth-child(3)': blockFadeIn 1s .3s $animations-easing both,
