--- a/docroot/themes/custom/themekit/partials/component/basic-banner/block--basic-banner.scss
+++ b/docroot/themes/custom/themekit/partials/component/basic-banner/block--basic-banner.scss
@@ -20,7 +20,7 @@
     }
   }
 
-  .field--name-field-media {
+  .media {
     @include banner-image;
     @include breakpoint(large) {
       @include flex-grid-size(5);
