--- a/docroot/themes/custom/themekit/partials/component/categories/block--inline-block--categories.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/categories/block--inline-block--categories.html.twig
@@ -5,6 +5,7 @@
 {% block content %}
   <div class="block-content">
     <div class="shape-wrapper">
+      <span class="frame"></span>
       {{ rendered_content }}
       <div class="categories-links">
         <h4>{{ 'Drupal voor'|t }}</h4>
