--- a/docroot/themes/custom/themekit/partials/node/type/event/featured-teaser/node--event--featured-teaser.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/event/featured-teaser/node--event--featured-teaser.html.twig
@@ -6,8 +6,8 @@
   {{ title_prefix }}
   {{ title_suffix }}
 
-
   <div{{ content_attributes.addClass('node__content') }}>
+    <span class="frame"></span>
     <div class="field-node-content">
       <div class="date-wrapper">
         <div class="date">
