--- a/docroot/themes/custom/themekit/partials/node/type/news/full/node--news--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/news/full/node--news--full.html.twig
@@ -14,9 +14,11 @@
       </div>
       {{ content.field_intro }}
     </div>
-    {{ content.field_image }}
+    <div class="media">
+      <span class="frame"></span>
+      {{ content.field_image }}
+    </div>
   </div>
-
 
   <div{{ content_attributes.addClass('node__content') }}>
     <div class="field-content">
