--- a/docroot/themes/custom/themekit/partials/node/type/partner/full/node--partner--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/partner/full/node--partner--full.html.twig
@@ -25,7 +25,10 @@
       </div>
       {{ content.field_intro }}
     </div>
-    {{ content.field_image }}
+    <div class="media">
+      <span class="frame"></span>
+      {{ content.field_image }}
+    </div>
   </div>
 
 
