--- a/docroot/themes/custom/themekit/partials/component/home-banner/block--inline-block--home-banner.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/home-banner/block--inline-block--home-banner.html.twig
@@ -3,7 +3,10 @@
 {% set rendered_content = content|without('field_media') %}
 
 {% block content %}
-  {{ content.field_media }}
+  <div class="media">
+    <span class="frame"></span>
+    {{ content.field_media }}
+  </div>
   <div class="content">
     {{ rendered_content }}
   </div>
