--- a/docroot/themes/custom/themekit/partials/component/text-with-media/block--inline-block--text-with-media.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/text-with-media/block--inline-block--text-with-media.html.twig
@@ -11,7 +11,10 @@
   <div class="mobile-heading">
     {{ content.field_heading }}
   </div>
-  {{ content.field_media }}
+  <div class="media">
+    <span class="frame"></span>
+    {{ content.field_media }}
+  </div>
   <div class="content">
     {{ rendered_content }}
   </div>
