--- a/docroot/themes/custom/themekit/partials/component/text-with-media/block--text-with-media.scss
+++ b/docroot/themes/custom/themekit/partials/component/text-with-media/block--text-with-media.scss
@@ -40,8 +40,8 @@
       }
     }
 
-    .field--name-field-media {
-      @include brand-shape(text-with-media-frame, $shape-z: z(default)) {
+    .media {
+      @include brand-shape-frame(text-with-media-frame, $shape-z: z(default)) {
         top: 0;
         left: -4px;
         right: 14px;
@@ -64,11 +64,11 @@
       }
     }
 
-    .field--name-field-media {
+    .media {
       @include breakpoint(large) {
         @include grid-column-offset(1);
       }
-      @include brand-shape(text-with-media-inverse-frame, $shape-z: z(default)) {
+      @include brand-shape-frame(text-with-media-inverse-frame, $shape-z: z(default)) {
         top: 0;
         left: 14px;
         right: -4px;
@@ -97,7 +97,7 @@
     margin-top: 24px;
   }
 
-  .field--name-field-media {
+  .media {
     padding-top: 14px;
     padding-bottom: 12px;
     @include breakpoint(small down) {
