--- a/docroot/themes/custom/themekit/partials/component/text/block--inline-block--text.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/text/block--inline-block--text.html.twig
@@ -7,5 +7,8 @@
 {% set attributes = attributes.addClass(classes) %}
 
 {% block content %}
+  {% if block.field_frame.value %}
+    <span class="frame"></span>
+  {% endif %}
   {{ content }}
 {% endblock %}
