--- a/docroot/themes/custom/themekit/partials/node/type/case/full/node--case--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/case/full/node--case--full.html.twig
@@ -21,7 +21,10 @@
       </div>
       {{ content.field_intro }}
     </div>
-    {{ content.field_image }}
+    <div class="media">
+      <span class="frame"></span>
+      {{ content.field_image }}
+    </div>
   </div>
 
 
