--- a/docroot/themes/custom/themekit/partials/node/type/event/full/node--event--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/event/full/node--event--full.html.twig
@@ -18,7 +18,10 @@
 
       {{ content.field_intro }}
     </div>
-    {{ content.field_image }}
+    <div class="media">
+      <span class="frame"></span>
+      {{ content.field_image }}
+    </div>
   </div>
 
 
