COD-12 - Fix issue with .frame block (1px outbox)

--- a/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
@@ -505,6 +505,7 @@ $shapes: (
       height: key($shape-properties, height);
     }
     clip-path: key($shape-properties, path);
+    overflow: hidden;
 
     @content;
 
