COD-39: Add condition for full view display CTs without media (not render frame)

--- a/docroot/themes/custom/themekit/partials/node/type/case/full/node--case--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/case/full/node--case--full.html.twig
@@ -21,10 +21,12 @@
       </div>
       {{ content.field_intro }}
     </div>
-    <div class="media">
-      <span class="frame"></span>
-      {{ content.field_image }}
-    </div>
+    {% if node.field_image.value %}
+      <div class="media">
+        <span class="frame"></span>
+        {{ content.field_image }}
+      </div>
+    {% endif %}
   </div>
 
 
