--- a/docroot/themes/custom/themekit/partials/node/type/news/full/node--news--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/news/full/node--news--full.html.twig
@@ -14,10 +14,12 @@
       </div>
       {{ content.field_intro }}
     </div>
-    <div class="media">
-      <span class="frame"></span>
-      {{ content.field_image }}
-    </div>
+    {% if node.field_image.value %}
+      <div class="media">
+        <span class="frame"></span>
+        {{ content.field_image }}
+      </div>
+    {% endif %}
   </div>
 
   <div{{ content_attributes.addClass('node__content') }}>
