COD-36: Adjust basic banner and banner layout

--- a/docroot/themes/custom/themekit/global/sass/components/_custom-blocks.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_custom-blocks.scss
@@ -9,6 +9,10 @@ body.splash-active {
   overflow: hidden;
 }
 
+html body.is-overflow {
+  overflow: hidden;
+}
+
 // Cookies Banner
 #sliding-popup {
   width: 100%;
