--- a/docroot/themes/custom/themekit/partials/component/basic-banner/block--inline-block--basic-banner.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/basic-banner/block--inline-block--basic-banner.html.twig
@@ -1,12 +1,15 @@
 {% extends "@partials/component/block.html.twig" %}
 
 {% set rendered_content = content|without('field_media') %}
+{% set block = content['#block_content'] %}
 
 {% block content %}
-  <div class="media">
-    <span class="frame"></span>
-    {{ content.field_media }}
-  </div>
+  {% if block.field_media.value %}
+    <div class="media">
+      <span class="frame"></span>
+      {{ content.field_media }}
+    </div>
+  {% endif %}
   <div class="content">
     {{ rendered_content }}
   </div>
