COD-40: Adjust node slider width

--- a/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy--category--full.scss
+++ b/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy--category--full.scss
@@ -54,6 +54,10 @@
 
     .block-slider-cases {
       margin-top: 25px;
+      max-width: calc(100vw - 2rem);
+      @include breakpoint(large) {
+        max-width: calc(100vw - 4rem);
+      }
     }
   }
 }
