COD-40: Adjust .field-info width for taxonomy categpry and node (full view display)

--- a/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy--category--full.scss
+++ b/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy--category--full.scss
@@ -30,7 +30,9 @@
       }
       > .field-info {
         max-width: 100%;
-        width: 417px;
+        @include breakpoint(large) {
+          width: 417px;
+        }
 
         .field--name-field-references-limit {
           display: flex;
