--- a/docroot/themes/custom/themekit/partials/node/view-mode/full/node--full.scss
+++ b/docroot/themes/custom/themekit/partials/node/view-mode/full/node--full.scss
@@ -28,7 +28,9 @@
       }
       > .field-info {
         max-width: 100%;
-        width: 417px;
+        @include breakpoint(large) {
+          width: 417px;
+        }
       }
     }
   }
