COD-1: Init News Listing component for LB

--- a/docroot/themes/custom/themekit/global/sass/base/_config.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_config.scss
@@ -557,4 +557,20 @@ $animations: (
     '.field--name-field-link': blockFadeIn 1s .1s $animations-easing both,
     '.block-view': blockFadeAngleIn 1s linear both,
   ),
+  '.block--views-blocknews-listing.animation-in': (
+    '.block__title': blockFadeIn 1s $animations-easing both,
+    '.views-row:nth-child(1)': blockFadeIn .5s $animations-easing both,
+    '.views-row:nth-child(2)': blockFadeIn .5s .1s $animations-easing both,
+    '.views-row:nth-child(3)': blockFadeIn .5s .2s $animations-easing both,
+    '.views-row:nth-child(4)': blockFadeIn .5s .3s $animations-easing both,
+    '.views-row:nth-child(5)': blockFadeIn .5s .4s $animations-easing both,
+    '.views-row:nth-child(6)': blockFadeIn .5s .5s $animations-easing both,
+    '.views-row:nth-child(7)': blockFadeIn .5s .6s $animations-easing both,
+    '.views-row:nth-child(8)': blockFadeIn .5s .7s $animations-easing both,
+    '.views-row:nth-child(9)': blockFadeIn .5s .8s $animations-easing both,
+    '.views-row:nth-child(10)': blockFadeIn .5s .9s $animations-easing both,
+    '.views-row:nth-child(11)': blockFadeIn .5s 1s $animations-easing both,
+    '.views-row:nth-child(12)': blockFadeIn .5s 1.1s $animations-easing both,
+    '.pager': blockFadeIn .5s 1.2s $animations-easing both,
+  ),
 );
